Added in-game menu

--- a/core/build.gradle
+++ b/core/build.gradle
@@ -5,6 +5,9 @@ dependencies {
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
+  implementation "com.badlogicgames.gdx:gdx:$gdxVersion"
+  // бібліотека з GifDecoder
+  implementation "com.github.tommyettinger:anim8-gdx:0.4.0"
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
