--- a/settings.gradle
+++ b/settings.gradle
@@ -6,3 +6,13 @@ plugins {
 // You can remove Strings from the list and reload the Gradle project
 // if you want to temporarily disable a subproject.
 include 'lwjgl3', 'core'
+// settings.gradle
+dependencyResolutionManagement {
+  repositoriesMode.set(RepositoriesMode.PREFER_PROJECT)
+  repositories {
+    mavenCentral()
+    google()
+  }
+}
+
+
